load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/pseudomuto/protoc-gen-doc
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "filters.go",
        "plugin.go",
        "renderer.go",
        "resources.go",
        "template.go",
        "version.go",
    ],
    importpath = "github.com/pseudomuto/protoc-gen-doc",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//protoc-gen-go/descriptor:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_masterminds_sprig//:go_default_library",
        "//extensions:go_default_library",
        "@com_github_pseudomuto_protokit//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
    ],
)

go_test(
    name = "project_test",
    srcs = [
        "bench_test.go",
        "filters_test.go",
        "plugin_test.go",
        "renderer_test.go",
        "template_test.go",
    ],
    embed = [":project"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "//:go_default_library",
        "//extensions:go_default_library",
        "@com_github_pseudomuto_protokit//:go_default_library",
        "@com_github_pseudomuto_protokit//utils:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
    ],
)
