load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["alias.go"],
    importpath = "github.com/pseudomuto/protoc-gen-doc/extensions/lyft_validate",
    visibility = ["//visibility:public"],
    deps = ["//extensions/envoyproxy_validate:go_default_library"],
)
